--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,13 +357,56 @@ body {
   text-align: center;
   grid-area: sign-up;
   margin-top: 33px;
-  padding: 10px 0px 8px 0px;
+  padding: 10px 0 8px 0;
 }
 
 .popover-is-closed {
   display: none;
 }
 
+/*Окно пользователя*/
+.account-popover {
+  position: absolute;
+  background-color: #ffffff;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+  width: 360px;
+  box-sizing: border-box;
+  z-index: 2;
+  right: 3px;
+  top: 11px;
+  padding: 22px 22px 36px 31px;
+  display: flex;
+  flex-direction: column;
+}
+
+.account-link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #3d546f;
+  margin: 0 0 22px 4px;
+  display: block;
+}
+
+.account-exit-button {
+  background-color: transparent;
+  color: #32425c;
+  border: 2px solid #63a63e;
+  border-radius: 2px;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 2px;
+  padding: 10px 0 8px 0;
+  width: 145px;
+}
+
+.account-popover .popover-title {
+  margin: 0 0 36px 0;
+}
 
 /*Навигация*/
 .header-navigation {
