--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1280,6 +1280,7 @@ body {
   box-sizing: border-box;
   border-radius: 50%;
   position: relative;
+  z-index: 0;
 }
 
 /*Лучшее расположение иконок*/
@@ -1292,6 +1293,23 @@ body {
   top: 0;
   left: 0;
   border-radius: 50%;
+  z-index: -1;
+}
+
+.social-link:hover::before {
+  background-color: #293449;
+}
+
+.social-link:active::before {
+  background-color: transparent;
+}
+
+.social-link:focus-visible {
+  outline: none;
+}
+
+.social-link:focus-visible::before {
+  outline: 2px solid #ffffff;
 }
 
 .social-icon {
