--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1376,6 +1376,21 @@ body {
   margin-top: 2px;
 }
 
+.footer-link:hover {
+  color: #ffbf47;
+}
+
+.footer-link:active {
+  color: #ffbf47;
+  opacity: 0.8;
+}
+
+.footer-link:focus-visible {
+  outline: 2px solid #ffbf47;
+  border-radius: 2px;
+  outline-offset: 3px;
+}
+
 .subscribe-description  {
   color: #ffffff;
   margin: 29px 0 1px;
