--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1229,7 +1229,7 @@ body {
   text-decoration: none;
   display: inline-block;
   min-width: 50px;
-  background: #3d546f;
+  background-color: #3d546f;
   border-radius: 2px;
   text-align: center;
   color: #ffffff;
