--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1159,6 +1159,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 380px;
 }
 
 .product-picture {
@@ -1256,6 +1257,10 @@ body {
 
 .result-link:hover .to-favorites {
   display: block;
+}
+
+.result-link:hover {
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
 }
 
   /*Пагинация*/
