--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1324,6 +1324,11 @@ body {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
 
+.result-link:focus-visible {
+  outline: 2px solid black;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
+}
+
   /*Пагинация*/
 .pagination-container {
   display: flex;
