--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,6 +258,7 @@ body {
   margin-top: 12px;
   padding: 2px 2px 0 27px;
   max-width: 100px;
+  display: none;
 }
 
 .login-button::before {
@@ -270,9 +271,49 @@ body {
   left: 0;
 }
 
+.account-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  color: #f1f5f7;
+  background-color: transparent;
+  border: none;
+  padding: 10px 0 10px 25px;
+  position: relative;
+  margin: 0 13px 0 0;
+  cursor: pointer;
+}
+
+.account-button::before {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 16px;
+  background-image: url("../images/header/user-icon.svg");
+  top: 13px;
+  left: 0;
+}
+
+.sign-out-button {
+  margin: 9px 2px 0 0;
+  padding: 12px;
+  border: none;
+  background-color: transparent;
+  width: 16px;
+  height: 16px;
+  background-image: url("../images/header/login.svg");
+  background-repeat: no-repeat;
+  background-position: top 50% right 50%;
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+
 /*Окно логина*/
 .login-container {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 220px;
 }
 
 .login-popover {
