--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,7 +258,6 @@ body {
   margin-top: 1px;
   padding: 2px 2px 0 27px;
   max-width: 100px;
-  display: none;
 }
 
 .login-button::before {
@@ -280,7 +279,7 @@ body {
   border: none;
   padding: 10px 0 10px 25px;
   position: relative;
-  margin: 0 13px 0 0;
+  margin: 0 7px 0 0;
   cursor: pointer;
 }
 
@@ -295,8 +294,8 @@ body {
 }
 
 .sign-out-button {
-  margin: 9px 2px 0 0;
-  padding: 12px;
+  margin: 4px -4px 0 0;
+  padding: 18px;
   border: none;
   background-color: transparent;
   width: 16px;
@@ -310,7 +309,7 @@ body {
 
 /*Прячет кнопки авторизованного пользователя*/
 .hide-button {
-  /*display: none;*/
+  display: none;
 }
 
 /*Окно логина*/
@@ -319,6 +318,19 @@ body {
   display: flex;
   flex-wrap: wrap;
   max-width: 220px;
+}
+
+.login-container button:hover {
+  background-color: #32425c;
+}
+
+.login-container button:active {
+  opacity: 0.6;
+}
+
+.login-container button:focus-visible {
+  outline: 3px solid #ffffff;
+  outline-offset: -2px;
 }
 
 .login-popover {
