--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,7 +215,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   border: none;
-  width: 100%;
+  width: calc(100% - 17px);
   height: 45px;
   box-sizing: border-box;
   padding: 0 0 4px 53px;
