--- a/styles/styles.css
+++ b/styles/styles.css
@@ -675,11 +675,16 @@ body {
   border-radius: 2px;
 }
 
+/*Размеры ярлыка для карточек рядом со сладером*/
+.card-item.new-item {
+  background-size: 370px 180px;
+}
+
 .card-item::after {
   position: absolute;
   content: "";
-  width: 100%;
-  height: 100%;
+  width: 370px;
+  height: 180px;
   top: 0;
   right: 0;
   background-repeat: no-repeat;
@@ -714,7 +719,6 @@ body {
 /*Ярлык новинки*/
 .new-item {
   position: relative;
-  background-size: 270px 380px;
   background-repeat: no-repeat;
   background-image:
     linear-gradient(45deg, rgba(0,0,0,0) 88%, rgba(238,54,67,1) 88%, rgba(238,54,67,1) 95.5%, rgba(0,212,255,0) 95.5%)
@@ -1303,7 +1307,9 @@ body {
   align-items: center;
 }
 
+/*Размеры ярлыка для карточек каталога*/
 .result-item.new-item {
+  background-size: 270px 380px;
   background-image: linear-gradient(45deg, rgba(0,0,0,0) 89.7%, rgba(238,54,67,1) 89.7%, rgba(238,54,67,1) 96.3%, rgba(0,212,255,0) 96.3%);
 }
 
