--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1243,6 +1243,19 @@ body {
   cursor: pointer;
 }
 
+.blue-border-button:hover {
+  opacity: 0.7;
+}
+
+.blue-border-button:active {
+  opacity: 0.3;
+}
+
+.blue-border-button:focus-visible {
+  outline: 3px solid #3d546f;
+  outline-offset: 2px;
+}
+
 .filter-button {
   margin: 46px 0 0 1px;
   width: 219px;
@@ -1340,6 +1353,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.result-item:hover, .result-item:focus-within {
+  box-shadow:  0 8px 20px rgba(0, 0, 0, 0.15);
 }
 
 .result-item:hover .item-hidden-buttons {
@@ -1494,8 +1511,7 @@ body {
 }
 
 .result-link:focus-visible {
-  outline: 2px solid black;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  outline: none;
 }
 
   /*Пагинация*/
